# docker-learning-labs

copy_and_add/: Dockerfile
copy_and_add/list_of_files/: sample.txt
cpp_compile/: deneme.txt  main.cpp
docker-pyt/: Dockerfile  main.py
fastapi-project/: Dockerfile  requirements.txt
fastapi-project/app/: main.py
gtest_example/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  build.sh  test_example  test_example.cpp
redis_example/: Dockerfile
